# python-intro

./: .pdm.toml  README.md  pyproject.toml  requirements.txt
exercicio/: sequencia.py
sintaxe/: booleano.py  casting.py  concatenacao.py  dicionario.py  funcoes_especiais.py  listas.py  string.py  variables.py
